# torrents-csv-server

./: .gitmodules  .woodpecker.yml  Cargo.toml  README.md  search.sh
docker/: Dockerfile  deploy.sh  docker-compose.yml  docker_update.sh
docker/dev/: Dockerfile  docker-compose.yml
docker/prod/: Dockerfile  deploy.sh  docker-compose.yml  nginx.conf
src/: main.rs
