[package]
name = "torrents-csv-service"
version = "0.1.0"
authors = ["Heretic <tylerjobsearch06@gmx.com>"]
edition = "2018"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
env_logger = "0.10.1"

serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1.0.193"

anyhow = "1.0.76"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
r2d2_sqlite_pool = "0.1.1"
r2d2 = "0.8.10"
[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]
