[package]
name = "torrents-csv-service"
version = "0.1.0"
authors = ["Heretic <tylerjobsearch06@gmx.com>"]
edition = "2018"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.

[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.5"
env_logger = "0.10.2"

serde = "1.0.197"
serde_json = "1.0.114"
serde_derive = "1.0.197"

anyhow = "1.0.80"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
r2d2_sqlite_pool = "0.1.1"
r2d2 = "0.8.10"
[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]
